--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,14 +6,15 @@
       "info-card#button-left"
     ]
   },
+  
   "rich-text": {
     "props": {
       "text": "*Hello, World!*",
       "textPosition": "RIGHT"
     }
   },
-  "info-card#button-right"
-    },
+
+  "info-card#button-right":{
       "props": {
         "isFullModeStyle": false,
         "textPosition": "right",
@@ -24,9 +25,10 @@
         "callToActionText": "Explore",
         "callToActionUrl": "/sale/d",
         "textAlignment": "center"
-  },
-  ...
-  "info-card#button-left": {
+  }
+},
+  
+"info-card#button-left":  {
     "props": {
       "isFullModeStyle": false,
       "textPosition": "left",
@@ -37,5 +39,7 @@
       "callToActionText": "Go to Collection",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center"
-}
+    }
+  }
+
 }
