--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,7 +6,7 @@
       "info-card#button-left"
     ]
   },
-  
+
   "rich-text": {
     "props": {
       "text": "*Hello, World!*",
@@ -35,7 +35,7 @@
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline": "Shining chrome",
       "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-      "callToActionMode": "String",
+      "callToActionMode": "link",
       "callToActionText": "Go to Collection",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center"
